# LLMAI

AdvancedAgentLLM/: .gitignore  PRETRAINING.md  README.md  pyproject.toml
AdvancedAgentLLM/configs/: README.md  agent.yaml  pretrain.yaml  sft.yaml
AdvancedAgentLLM/configs/model/: base.yaml  large.yaml
AdvancedAgentLLM/outputs/: README.md
AdvancedAgentLLM/scripts/: README.md  pretrain.py  run_agent.py  sft.py  train_tokenizer.py
AdvancedAgentLLM/src/advanced_agent_llm/: __init__.py  config.py
AdvancedAgentLLM/src/advanced_agent_llm/agent/: README.md  __init__.py  runtime.py  schemas.py  tool_registry.py
AdvancedAgentLLM/src/advanced_agent_llm/data/: __init__.py  collators.py  packing.py  pretrain_dataset.py  sft_dataset.py  tokenizer.py
AdvancedAgentLLM/src/advanced_agent_llm/model/: __init__.py  attention.py  block.py  embeddings.py  mlp.py  normalization.py  transformer.py
AdvancedAgentLLM/src/advanced_agent_llm/training/: __init__.py  checkpointing.py  distributed.py  logging.py  losses.py  mixed_precision.py  optimizers.py  schedulers.py  trainer.py
AdvancedAgentLLM/tests/: test_model_components.py
AdvancedLLM/: .gitignore  README.md
AdvancedLLM/configs/: README.md  pretrain.yaml
AdvancedLLM/outputs/: README.md
AdvancedLLM/scripts/: README.md  pretrain.py  train_tokenizer.py
AdvancedLLM/tests/: README.md  test_attention.py  test_checkpointing.py  test_loss.py  test_model_shapes.py  test_normalization.py  test_packing.py  test_tokenizer.py
BasicLLM/: .gitignore  GENERATION.md  README.md  TRAINING.md  pyproject.toml
(+36 files in other folders)
