[project]
name = "advanced-agent-llm"
version = "0.1.0"
description = "An educational decoder-only model with a staged path to SFT and agents"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0",
    "torch>=2.6",
    "tokenizers>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_agent_llm"]

[dependency-groups]
dev = ["pytest>=8.0"]
